--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
+    <ul class="description">
+      <li>Mouse</li>
+      <li>- Wheel: Zoom</li>
+      <li>- Shift + Wheel: Change center & Zoom</li>
+      <li>- Click: Change center</li>
+      <li>Key</li>
+      <li>- 1,2,3: Change color scheme</li>
+      <li>- m: Toggle float precision (64bit, 128bit)</li>
+      <li>- Arrow: Change iteration count (±100)</li>
+      <li>- Shift + Arrow: Change iteration count wisely (maybe)</li>
+      <li>- 9: Reset iteration count to 10000</li>
+      <li>- 0: Reset iteration count to 500</li>
+    </ul>
   </body>
 </html>
