--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li>Key</li>
       <li>- 1,2,3: Change color scheme</li>
       <li>- m: Toggle float precision (64bit, 128bit)</li>
+      <li>- r: Reset r to 2.0</li>
       <li>- Arrow: Change iteration count (±100)</li>
       <li>- Shift + Arrow: Change iteration count wisely (maybe)</li>
       <li>- 9: Reset iteration count to 10000</li>
