展開するノードを指定しておく

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
+    <main id="p5root"></main>
     <ul class="description">
       <li>Mouse</li>
       <li>- Wheel: Zoom</li>
