--- a/index.html
+++ b/index.html
@@ -7,27 +7,11 @@
     <title>mandelbrot</title>
   </head>
   <body>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/main.tsx"></script>
+    <div id="app-root"></div>
     <main>
       <div id="p5root"></div>
-      <div id="sidebar-right">
-        <div class="description">ここにパラメータが入る</div>
-        <ul class="description">
-          <li>Mouse</li>
-          <li>- Wheel: Zoom</li>
-          <li>- Shift + Wheel: Change center & Zoom</li>
-          <li>- Click: Change center</li>
-          <li>Key</li>
-          <li>- ↑↓: Zoom</li>
-          <li>- 1,2,3: Change color scheme</li>
-          <li>- m: Toggle float precision (64bit, 128bit)</li>
-          <li>- r: Reset r to 2.0</li>
-          <li>- ←→: Change iteration count (±100)</li>
-          <li>- Shift + ←→: Change iteration count wisely (maybe)</li>
-          <li>- 9: Reset iteration count to 10000</li>
-          <li>- 0: Reset iteration count to 500</li>
-        </ul>
-      </div>
+      <div id="sidebar-right"></div>
     </main>
   </body>
 </html>
