--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <script type="module" src="/src/main.tsx"></script>
     <div id="app-root"></div>
     <main>
+      <div id="header"></div>
       <div id="p5root"></div>
       <div id="sidebar-right"></div>
+      <div id="footer"></div>
     </main>
   </body>
 </html>
