--- a/index.html
+++ b/index.html
@@ -7,22 +7,13 @@
     <title>mandelbrot</title>
   </head>
   <body>
-    <script type="module" src="/src/main.ts"></script>
-    <main id="p5root"></main>
-    <ul class="description">
-      <li>Mouse</li>
-      <li>- Wheel: Zoom</li>
-      <li>- Shift + Wheel: Change center & Zoom</li>
-      <li>- Click: Change center</li>
-      <li>Key</li>
-      <li>- ↑↓: Zoom</li>
-      <li>- 1,2,3: Change color scheme</li>
-      <li>- m: Toggle float precision (64bit, 128bit)</li>
-      <li>- r: Reset r to 2.0</li>
-      <li>- ←→: Change iteration count (±100)</li>
-      <li>- Shift + ←→: Change iteration count wisely (maybe)</li>
-      <li>- 9: Reset iteration count to 10000</li>
-      <li>- 0: Reset iteration count to 500</li>
-    </ul>
+    <script type="module" src="/src/main.tsx"></script>
+    <div id="app-root"></div>
+    <main>
+      <div id="header"></div>
+      <div id="p5root"></div>
+      <div id="sidebar-right"></div>
+      <div id="footer"></div>
+    </main>
   </body>
 </html>
