UI調整、操作説明をモーダルに引っ込めた

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
     <script type="module" src="/src/main.tsx"></script>
     <div id="app-root"></div>
-    <main>
+    <div id="main">
       <div id="header"></div>
       <div id="p5root"></div>
       <div id="sidebar-right"></div>
       <div id="footer"></div>
-    </main>
+    </div>
   </body>
 </html>
