--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mandelbrot</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <script type="module" src="/src/main.tsx"></script>
     <div id="app-root"></div>
-    <main>
+    <div id="main">
       <div id="header"></div>
       <div id="p5root"></div>
       <div id="sidebar-right"></div>
       <div id="footer"></div>
-    </main>
+    </div>
   </body>
 </html>
