metaタグをいくつか追加

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mandelbrot set interactive viewer</title>
+    <meta
+      name="description"
+      content="Explore and visualize the Mandelbrot set interactively."
+    />
+    <meta
+      name="keywords"
+      content="Mandelbrot set, fractals, interactive viewer, Mandelbrot set explorer"
+    />
+    <title>Mandelbrot set interactive viewer - p5mandelbrot</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
