canvasにかぶせて表示するための要素を追加

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <div id="app-root"></div>
     <div id="main">
       <div id="header"></div>
-      <div id="p5root"></div>
+      <div id="canvas-wrapper">
+        <div id="p5root"></div>
+        <div id="canvas-overlay"></div>
+      </div>
       <div id="sidebar-right"></div>
       <div id="footer"></div>
     </div>
