canvasのcursorが無効になっていたのを修正

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <div id="app-root"></div>
     <div id="main">
       <div id="header"></div>
-      <div id="canvas-wrapper">
-        <div id="p5root"></div>
+      <div id="canvas-wrapper" style="pointer-events: none">
         <div id="canvas-overlay"></div>
+        <div id="p5root" style="pointer-events: auto"></div>
       </div>
       <div id="sidebar-right"></div>
       <div id="footer"></div>
