--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
       <div id="sidebar-right"></div>
       <div id="footer"></div>
     </div>
+    <div id="supersampling-overlay"></div>
   </body>
 </html>
